--- a/public/Views/ChartView/index.html
+++ b/public/Views/ChartView/index.html
@@ -92,21 +92,19 @@
     <script src="https://d3js.org/d3.v4.min.js"></script>
 
     <script>
-        var margin = {top: 40, right: 40, bottom: 40, left: 40},
-            width = 960 - margin.left - margin.right,
-            height = 200 - margin.top - margin.bottom;
+            var width = 960,
+            height = 200;
 
         var x = d3.scalePoint()
-            .range([0 + margin.left, width]);
+            .range([0, width]);
 
         var y = d3.scaleLinear()
-            .range([height - margin.bottom, 0]);
+            .range([height, 0]);
 
         var chart = d3.select(".chart")
-            .attr("width", width + margin.left + margin.right)
-            .attr("height", height + margin.top + margin.bottom)
-            .append("g")
-            .attr("transform", "translate(" + margin.left + "," + margin.top + ")");
+            .attr("width", width)
+            .attr("height", height)
+            .append("g");
 
         var xhttp = new XMLHttpRequest();
         xhttp.onreadystatechange = function() {
@@ -139,7 +137,11 @@
                          return "translate(" + x(`${date.getMonth()}/${date.getDate()}/${date.getFullYear()}`) + ",0)";
                     });
 
-                
+                bar.enter().append("rect")
+                    .attr("x", 0)
+                    .attr("y", 0)
+                    .attr("width", 100)
+                    .attr("height", 100);
             }
         };
 
